--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>viveka g v</title>
+        <title>MANU</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Pranav" name="keywords">
         <meta content="Pranav" name="description">
