--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <div class="hero-content">
                             <div class="hero-text">
                                 <p>I'm</p>
-                                <h1>Viveka G V </h1>
+                                <h1>MANU </h1>
                                 <h2></h2>
                                 <div class="typed-text">Active Learner, Future computer Engineer</div>
                             </div>
