--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>MANU</title>
+        <title>VIVEKA G V</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Pranav" name="keywords">
         <meta content="Pranav" name="description">
@@ -59,7 +59,7 @@
                         <div class="hero-content">
                             <div class="hero-text">
                                 <p>I'm</p>
-                                <h1>MANU </h1>
+                                <h1>VIVEKA G V</h1>
                                 <h2></h2>
                                 <div class="typed-text">Active Learner, Future computer Engineer</div>
                             </div>
@@ -72,7 +72,7 @@
                     <div class="col-sm-12 col-md-6 d-none d-md-block">
                         <div class="hero-image">
 						<br>
-                            <img src="img/virat.jpg" alt="Hero Image">
+                            <img src="img/VIVEK.jpg" alt="Hero Image">
                         </div>
                     </div>
                 </div>
