--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <div class="about-img">
-                            <img src="virat.jpg" alt="Image">
+                            <img src="VIVEK.jpg" alt="Image">
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -153,7 +153,7 @@
                                     <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
 								<div class="skill-name">
-                                    <p>Basics in Data Structure in Python</p><p>85%</p>
+                                    <p>DSA in C</p><p>85%</p>
                                 </div>
                                 <div class="progress">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
