--- a/index.html
+++ b/index.html
@@ -282,23 +282,23 @@
             <div class="container">
                 <header class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
                     <p>My Resume</p>
-                    <h2>Working Experience</h2>
+                    <h2></h2>
                 </header>
                 <div class="timeline">
                     <div class="timeline-item left wow slideInLeft" data-wow-delay="0.1s">
                         <div class="timeline-text">
-                            <div class="timeline-date">August 2022 - Present</div>
-                            <h2>Nokia Network</h2>
-                            <h4>Student Trainee (RAN Engineer), Bangalore</h4>
+                            <div class="timeline-date"></div>
+                            <h2></h2>
+                            <h4></h4>
                             <p>
-							 I am vivek G V</br>
-							 I am from chitradurga</br>
- Depth Knowledge of 2G,3G,4G,5G Architecture and SRAN BTS.</br>
- Familiar with Robot-Framework, Jenkins, Git, Putty platforms.</br>
- Extensive Knowledge on Call Flow and Log analysis (Wireshark, Syslog, EMIL).</br>
- Hands-on experience in working on Hardware's like System Module, Radio Module, Base-band Cards.</br>
- Work with Jira and Reporting Dashboard.</br>
- Proven communication skills and ability to troubleshoot and resolve networking issues.
+							 </br>
+							 </br>
+ </br>
+ </br>
+ </br>
+ </br>
+ </br>
+ 
                                </p>
                         </div>
                     </div>
