--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                             <h2>Visvesvaraya Technological University (VTU)</h2>
                             <h4>Bachelor Degree (Computer Science Engineering)</h4>
                             <p>
-                                I am studying  Bachelor of Engineering in Computer Science atvShridevi Institute of Engineering and Technology, Sira Road, Tumkur.
+                                I am studying  Bachelor of Engineering in Computer Science atShridevi Institute of Engineering and Technology, Sira Road, Tumkur.
                             </p>
                         </div>
                     </div>
@@ -370,72 +370,7 @@
                 <div class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
                     <p>What I did</p>
                     <h2>PROJECTS</h2>
-                </div>
-                <div class="row">
-                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.0s">
-                        <div class="service-item">
-                            <div class="service-icon">
-                                <i class="fa fa-laptop"></i>
-                            </div>
-                            <div class="service-text">
-                                <h3>Live Performace Monitoring on an Opestack Cloud</h3>
-                                <p>
-                                   The system monitoring is an essential  and an important  to maintain the reliability and stability of cloud.</br>
-
-   
-  The experiment proves that the system has good effectiveness and real-time performance, which makes the OpenStack cloud platform more complete and also helps to maintain the reliability and stability of Open-Stack cloud platform. 
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.2s">
-                        <div class="service-item">
-                            <div class="service-icon">
-                                <i class="fa fa-laptop-code"></i>
-                            </div>
-                            <div class="service-text">
-                                <h3>DevOps Methods for Automation of server Management Using Ansible</h3>
-                                <p>
-                                   The main objective is to Automate of Customer application from the provision of environment to the delivery of the System.<br>
-
-									In modern field of information technology and growing demand of customers, Pressure on information technology organizations is constantly increasing to apply for a client in a private cloud
-								  </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.4s">
-                        <div class="service-item">
-                            <div class="service-icon">
-                                <i class="fab fa-linux"></i>
-                            </div>
-                            <div class="service-text">
-                                <h3>Forecasting Store Business Data Using GCN Network</h3>
-                                <p>
-                                    Time Series forecasting tasks can be carried out following different approaches. The most classical is based on statistical and autoregressive methods. More tricky are the algorithms based on boosting and ensemble where we have to produce a good amount of useful handmade features with rolling periods.
-									 neural network models that enable more freedom in their development, providing customizable adoption of sequential modeling and much more.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-					<div class="col-lg-6 wow fadeInUp" data-wow-delay="0.4s">
-                        <div class="service-item">
-                            <div class="service-icon">
-                                <i class="fab fa-ubuntu"></i>
-                            </div>
-                            <div class="service-text">
-                                <h3>Started Jenkins using Docker and Created a Jenkins Job</h3>
-                                <p>
-                                  Jenkins is one of the most popular CI/CD tools or an automation server that allows developers to build, test and deploy software.<br>
-									In a single job, we have multiple Build steps which allows you to run several commands. Also, we can have multiple Post-build Actions in our job. Post-build Actions section can be used to specify your Artifacts and eventually once the job run is completed.
-. 
-                            </p>
-                            </div>
-                        </div>
-                    </div>
-                    
-                </div>
-            </div>
-        </div>
+                
         <!-- Service End -->
 
 
