--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
             <div class="container">
                 <div class="section-header text-center wow zoomIn" data-wow-delay="0.1s">
                     <p>What I did</p>
-                    <h2>PROJECTS</h2>
+                    <h2></h2>
                 
         <!-- Service End -->
 
@@ -907,7 +907,7 @@
                             <p>vivekdmk123@gmail.com</p>                   
 							</div>
                         <div class="footer-social">
-                            <a href="https://twitter.com/PRANAVTP0"><i class="fab fa-twitter"></i></a>
+                            <a href=" https://x.com/Vivekagv137040?t=1HwdGfrZ5BLPs0IhEET2fw&s=08 "><i class="fab fa-twitter"></i></a>
                             <a href="https://github.com/Viveka_G_V CSE"><i class="fab fa-github"></i></a>
                             
                             <a href="https://www.instagram.com/vivekgv12/?hl=en"><i class="fab fa-instagram"></i></a>
@@ -916,7 +916,7 @@
                     </div>
                 </div>
                 <div class="container copyright">
-                    <p>&copy; <a href="#">Viveka G V</a> All rights reserved | Designed By <a href="">Saheel and Yogesh</a></p>
+                    <p>&copy; <a href="#">Viveka G V</a> All rights reserved | Designed By <a href="">vivek g v</a></p>
                 </div>
             </div>
         </div>
