--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <div class="col-sm-12 col-md-6 d-none d-md-block">
                         <div class="hero-image">
 						<br>
-                            <img src="img/gv.jpg" alt="Hero Image">
+                            <img src="img/OIP.jpg" alt="Hero Image">
                         </div>
                     </div>
                 </div>
