--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <div class="col-sm-12 col-md-6 d-none d-md-block">
                         <div class="hero-image">
 						<br>
-                            <img src="img/OIP.jpg" alt="Hero Image">
+                            <img src="img/VIVEK.jpeg" alt="Hero Image">
                         </div>
                     </div>
                 </div>
@@ -87,7 +87,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <div class="about-img">
-                            <img src="gv.jpg" alt="Image">
+                            <img src="OIP.jpg" alt="Image">
                         </div>
                     </div>
                     <div class="col-lg-6">
