--- a/index.html
+++ b/index.html
@@ -907,7 +907,7 @@
                             <p>vivekdmk123@gmail.com</p>                   
 							</div>
                         <div class="footer-social">
-                            <a href=" https://x.com/Vivekagv137040?t=1HwdGfrZ5BLPs0IhEET2fw&s=08 "><i class="fab fa-twitter"></i></a>
+                            <a href=" https://twitter.com/PRANAVTP0 "><i class="fab fa-twitter"></i></a>
                             <a href="https://github.com/Viveka_G_V CSE"><i class="fab fa-github"></i></a>
                             
                             <a href="https://www.instagram.com/vivekgv12/?hl=en"><i class="fab fa-instagram"></i></a>
