--- a/index.html
+++ b/index.html
@@ -893,6 +893,32 @@
             </div>
         </div>
         <!-- Contact End -->
+			  <!-- Footer Start -->
+        <div class="footer wow fadeIn" data-wow-delay="0.3s">
+            <div class="container-fluid">
+                <div class="container">
+                    <div class="footer-info">
+                        <h2>Pranav T P</h2>
+                        <h3>Tumkur, Karnataka, India.</h3>
+                        <div class="footer-menu">
+                            <p> (+91) 8197182508</p>
+                            <p>Pranavparamesh010@gmail.com</p>
+                        </div>
+                        <div class="footer-social">
+                            <a href="https://twitter.com/PRANAVTP0"><i class="fab fa-twitter"></i></a>
+                            <a href="https://github.com/pranavparamesh"><i class="fab fa-github"></i></a>
+                            
+                            <a href="https://www.instagram.com/pranav_paramesh/?hl=en"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.linkedin.com/in/pranav-t-p-798041195/"><i class="fab fa-linkedin-in"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="container copyright">
+                    <p>&copy; <a href="#">Pranav T P</a> All rights reserved | Designed By <a href="">Pranav T P</a></p>
+                </div>
+            </div>
+        </div>
+        <!-- Footer End -->
 
 
       
