--- a/index.html
+++ b/index.html
@@ -898,11 +898,11 @@
             <div class="container-fluid">
                 <div class="container">
                     <div class="footer-info">
-                        <h2>Pranav T P</h2>
+                        <h2>Viveka g v</h2>
                         <h3>Tumkur, Karnataka, India.</h3>
                         <div class="footer-menu">
-                            <p> (+91) 8197182508</p>
-                            <p>Pranavparamesh010@gmail.com</p>
+                            <p> (+91) 7411077093</p>
+                            <p>vivekdmk123@gmail.com</p>
                         </div>
                         <div class="footer-social">
                             <a href="https://twitter.com/PRANAVTP0"><i class="fab fa-twitter"></i></a>
@@ -914,7 +914,7 @@
                     </div>
                 </div>
                 <div class="container copyright">
-                    <p>&copy; <a href="#">Pranav T P</a> All rights reserved | Designed By <a href="">Pranav T P</a></p>
+                    <p>&copy; <a href="#">viveka g v</a> All rights reserved | Designed By <a href="">vivek gv</a></p>
                 </div>
             </div>
         </div>
