--- a/index.html
+++ b/index.html
@@ -905,13 +905,13 @@
                             <p>vivekdmk123@gmail.com</p>
                         </div>
                         <div class="footer-social">
-                            <a href="https://twitter.com/PRANAVTP0"><i class="fab fa-twitter"></i></a>
-                            <a href="https://github.com/pranavparamesh"><i class="fab fa-github"></i></a>
+                            <a href="https://x.com/Vivekagv137040?t=wHq2Ya6psTjmqsrjjBOqLQ&s=08"><i class="fab fa-twitter"></i></a>
+                            <a href=https://github.com/VivekaGV"><i class="fab fa-github"></i></a>
                             
-                            <a href="https://www.instagram.com/pranav_paramesh/?hl=en"><i class="fab fa-instagram"></i></a>
-                            <a href="https://www.linkedin.com/in/pranav-t-p-798041195/"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="https://www.instagram.com/vivekgv12?utm_source=qr&igsh=ZDExYjZkNGI0OA=="><i class="fab fa-instagram"></i></a>
+                            <a href=""><i class="fab fa-linkedin-in"></i></a>
                         </div>
-                    </div>
+                    </div>https://www.linkedin.com/in/viveka-gv-56a484260
                 </div>
                 <div class="container copyright">
                     <p>&copy; <a href="#">viveka g v</a> All rights reserved | Designed By <a href="">vivek gv</a></p>
